--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>CyberPalm2048</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
 <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
@@ -19,13 +19,15 @@
         <span class="mdc-button__ripple"></span>
         <span class="mdc-button__label">ENABLE WEBCAM</span>
       </button>
+      <button class="mdc-button mdc-button--raised">
+        <span class="mdc-button__ripple"></span>
+        <span id="flip_webcam" class="mdc-button__label">FLIP WEBCAM</span>
+      </button>
       <div style="position: relative;">
         <video id="webcam" autoplay playsinline></video>
         <canvas class="output_canvas" id="output_canvas" style="position: absolute; left: 0px; top: 0px;"></canvas>
       </div>
-      <button>
-        <span id="flip_webcam">FLIP WEBCAM</span>
-      </button>
+      
     </div>
   <div class="bg-cover">
     <div id="game-board"></div>
