--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <button id="webcamButton" class="btn">
         <span >ENABLE WEBCAM</span>
       </button>
-      <button class="btn">
-        <span id="flip_webcam">FLIP WEBCAM</span>
+      <button id="flip_webcam" class="btn">
+        <span>FLIP WEBCAM</span>
       </button>
       <div style="position: relative;">
         <video id="webcam" autoplay playsinline></video>
